--- a/index.html
+++ b/index.html
@@ -170,6 +170,11 @@
                     <p>Navigate your spacecraft to a safe landing on the moon while managing fuel and avoiding crashes!</p>
                     <a href="lunarlander/index.html" class="play-button">Play</a>
                 </div>
+                <div class="game-box">
+                    <h2>Swipe2Chat</h2>
+                    <p>Chat with your friends, tinder style.</p>
+                    <a href="swipe2chat/index.html" class="play-button">Play</a>
+                </div>
         </section>
 
         <section id="ai-experiments">
