--- a/swipe2chat/index.html
+++ b/swipe2chat/index.html
@@ -25,6 +25,7 @@
                 </div>
                 <form id="quick-signin-form">
                     <input type="text" id="quick-name" placeholder="Enter your name" required>
+                    <input type="tel" id="quick-phone" placeholder="Enter your phone number" required>
                     <button type="submit" class="quick-signin-btn">Continue with Name</button>
                 </form>
             </div>
