--- a/apps/slido.html
+++ b/apps/slido.html
@@ -48,5 +48,10 @@
         <a href="mailto:elichen+appsupport@gmail.com">appsupport@gmail.com</a></p>
     </div>
 
+    <div class="container" style="margin-top: 20px;">
+        <h2>Additional Links</h2>
+        <p><a href="privacy.html">Privacy Policy</a></p>
+    </div>
+
 </body>
 </html>
