--- a/apps/tileslidr.html
+++ b/apps/tileslidr.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slido Support</title>
+    <title>Tile Slidr Support</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -27,8 +27,8 @@
 </head>
 <body>
 
-    <h1>Slido Support</h1>
-    <p>Need help with Slido? Find answers below or contact us for assistance.</p>
+    <h1>Tile Slidr Support</h1>
+    <p>Need help with Tile Slidr? Find answers below or contact us for assistance.</p>
 
     <div class="container">
         <h2>Frequently Asked Questions</h2>
