--- a/apps/support.html
+++ b/apps/support.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tile Slidr Support</title>
+    <title>App Support</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -27,17 +27,11 @@
 </head>
 <body>
 
-    <h1>Tile Slidr Support</h1>
-    <p>Need help with Tile Slidr? Find answers below or contact us for assistance.</p>
+    <h1>App Support</h1>
+    <p>Need help with an app? Find answers below or contact us for assistance.</p>
 
     <div class="container">
         <h2>Frequently Asked Questions</h2>
-        <p><strong>How do I play?</strong><br>
-        Simply tap on tiles to slide them into place and solve the puzzle.</p>
-
-        <p><strong>How can I use my own photos?</strong><br>
-        When starting a new puzzle, select the "Use Your Own Photo" option to choose an image from your gallery.</p>
-
         <p><strong>App crashes or issues?</strong><br>
         Try restarting the app or reinstalling it. If the issue persists, contact us below.</p>
     </div>
