--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="#ai-experiments">AI Experiments</a>
             <a href="https://github.com/elichen" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/elichen" target="_blank">LinkedIn</a>
+            <a href="https://apps.apple.com/us/developer/eli-chen/id307932247" target="_blank">iOS Apps</a>
         </nav>
 
         <section id="about" class="about-section">
