--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </section>
 
         <section id="ai-apps">
-            <h2 class="section-header">AI Generated Applications</h2>
+            <h2 class="section-header">Built with AI</h2>
             <div class="projects-grid">
                 <div class="game-box">
                     <h2>AI Wordle</h2>
@@ -179,7 +179,7 @@
         </section>
 
         <section id="ai-experiments">
-            <h2 class="section-header">AI Experiments</h2>
+            <h2 class="section-header">Experiments on AI</h2>
             <div class="projects-grid">
                 <div class="game-box">
                     <h2>MinGPT</h2>
