--- a/index.html
+++ b/index.html
@@ -27,9 +27,14 @@
             <h2 class="section-header">Built with AI</h2>
             <div class="projects-grid">
                 <div class="game-box">
-                    <h2>AI Music Loop Muse</h2>
+                    <h2>AI Poetry Garden</h2>
+                    <p>Plant word seeds and watch AI-generated poetry bloom organically with animated visualizations. Harvest your favorite verses!</p>
+                    <a href="poetry-garden/index.html" class="play-button">Play</a>
+                </div>
+                <div class="game-box">
+                    <h2>AI Music Loop</h2>
                     <p>Craft your own melodies on a grid and let an AI generate creative variations. Explore interactive music creation!</p>
-                    <a href="music_loop_generator/index.html" class="play-button">Experiment</a>
+                    <a href="music_loop_generator/index.html" class="play-button">Play</a>
                 </div>
                 <div class="game-box">
                     <h2>AI Wordle</h2>
