--- a/index.html
+++ b/index.html
@@ -167,6 +167,11 @@
                     <a href="3dlife/index.html" class="play-button">Play</a>
                 </div>
                 <div class="game-box">
+                    <h2>Wave Function Collapse</h2>
+                    <p>Interactive maze generation using quantum-inspired algorithm with real-time entropy visualization.</p>
+                    <a href="wfc/index.html" class="play-button">Play</a>
+                </div>
+                <div class="game-box">
                     <h2>Flowspace</h2>
                     <p>An interactive fluid simulation that dances with sound and motion.</p>
                     <a href="flowspace/index.html" class="play-button">Play</a>
