--- a/index.html
+++ b/index.html
@@ -157,6 +157,11 @@
                     <a href="password/index.html" class="play-button">Play</a>
                 </div>
                 <div class="game-box">
+                    <h2>Neural Bridge Builder</h2>
+                    <p>Connect Large Language Models with Knowledge Graphs to create unified AI systems in this educational puzzle game.</p>
+                    <a href="neural-bridge/index.html" class="play-button">Play</a>
+                </div>
+                <div class="game-box">
                     <h2>Sorting Visualizer</h2>
                     <p>Watch and compare how different sorting algorithms organize data in real-time, with step-by-step visualization.</p>
                     <a href="sort/index.html" class="play-button">Play</a>
