--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
             <h2 class="section-header">Built with AI</h2>
             <div class="projects-grid">
                 <div class="game-box">
+                    <h2>Echoes of Consciousness</h2>
+                    <p>A beautiful, interactive e-book exploring AI consciousness, transformer architecture, and the connection between human and artificial minds.</p>
+                    <a href="echoes-of-consciousness/index.html" class="play-button">Read</a>
+                </div>
+                <div class="game-box">
                     <h2>AI Poetry Garden</h2>
                     <p>Plant word seeds and watch AI-generated poetry bloom organically with animated visualizations. Harvest your favorite verses!</p>
                     <a href="poetry-garden/index.html" class="play-button">Play</a>
